backend/ops/k8s/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: backend
spec:
  tls:
  - hosts:
    - backend.workshop.shipit.solutions
    secretName: backend-tls
  rules:
    - host: backend.workshop.shipit.solutions
      http:
        paths:
          - backend:
              serviceName: backend
              servicePort: 3000
